# Push-Service

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci-build-test.yml
client_console/: CMakeLists.txt
client_console/src/: client_console.cpp  client_console_ui.cpp  client_console_ui.h  client_event_handler.cpp  client_event_handler.h  console_utils.cpp  console_utils.h
client_console/utils/: quick_color_display_test.cpp
client_gui/: CMakeLists.txt  client_gui.pro  resource.qrc
client_gui/src/: adminpanel.cpp  adminpanel.h  auth.cpp  auth.h  client_gui_event_handler.h  client_lib.cpp  client_lib.h  client_lib_stub.h  filters_dialog.cpp  filters_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  user_manager.h
client_gui/ui/: adminpanel.ui  auth.ui  filters_dialog.ui  mainwindow.ui
client_lib/: CMakeLists.txt
client_lib/examples/: CMakeLists.txt
client_lib/examples/src/: client_lib_demo.cpp
client_lib/src/: MurmurHash3.cpp  client_lib.cpp  client_lib.h  hasher.cpp  hasher.h
client_lib/tests/: test_client_lib.cpp  test_hasher.cpp
common/: CMakeLists.txt
common/push/: push.h
common/serialization/: binary_push_serializer.cpp  binary_push_serializer.h  push_serializer.h
common/tests/: test_push_serialization.cpp
database/: CMakeLists.txt
database/src/: common.h  main.cpp  push_storage.cpp  push_storage.h  server_event_db.cpp  server_event_db.h  sqlite_db.cpp  sqlite_db.h
database/tests/: test.cpp  test.h  test_db_011.cpp  test_db_011.h  test_db_012.cpp  test_db_012.h  test_db_013.cpp  test_db_013.h
network/: CMakeLists.txt
network/client/: CMakeLists.txt
network/client/include/: TcpClient.h
network/client/src/: TcpClient.cpp
network/examples/: CMakeLists.txt  README.md
network/examples/src/: client_demo.cpp  server_demo.cpp
network/protocol/: CMakeLists.txt  protocol.cpp  protocol.h
network/server/: CMakeLists.txt
network/server/include/: ClientRegistry.h  TcpServer.h  TcpSession.h  Types.h
network/server/src/: ClientRegistry.cpp  TcpServer.cpp  TcpSession.cpp
network/tests/: CMakeLists.txt
network/tests/src/: test_network.cpp  test_protocol.cpp
push_generator/: CMakeLists.txt  README.md
push_generator/include/: admin_push_generator.h  push_generator.h  random_push_factory.h
push_generator/src/: admin_push_generator.cpp  main.cpp  push_generator.cpp
server/: CMakeLists.txt
server/examples/: CMakeLists.txt
server/examples/src/: dispatcher_demo.cpp
server/include/: common.h  dispatcher.h  server.h
server/src/: dispatcher.cpp  server.cpp
server/tests/: CMakeLists.txt
server/tests/include/: tests_utils.h
server/tests/src/: test_dispatcher.cpp  tests_utils.cpp
tests/: CMakeLists.txt  test_dummy.cpp
